Bug 1958991. Simplify calculation in nsDisplayTransform::GetHitDepthAtPoint to avoid numerical float inaccuracies. r=jstutte

This is also much quicker.

Differential Revision: https://phabricator.services.mozilla.com/D249508