layout/painting/nsDisplayList.cpp
@@ -7224,14 +7224,17 @@ float nsDisplayTransform::GetHitDepthAtPoint(nsDisplayListBuilder* aBuilder,
 
   Matrix4x4 inverse = matrix;
   inverse.Invert();
-  Point4D point =
-      inverse.ProjectPoint(Point(NSAppUnitsToFloatPixels(aPoint.x, factor),
-                                 NSAppUnitsToFloatPixels(aPoint.y, factor)));
 
-  Point point2d = point.As2DPoint();
-
-  Point3D transformed = matrix.TransformPoint(Point3D(point2d.x, point2d.y, 0));
-  return transformed.z;
+  // Compute the value z so that (aPoint.x, aPoint.y, z, 1) gets transformed by
+  // inverse to the z=0 plane. This is the same thing that
+  // Matrix4x4Typed::ProjectPoint does, but we are only interested in the z
+  // value, not the projected point, thus we extract the formula here, look
+  // there for how this equation is determined.
+  // https://searchfox.org/mozilla-central/rev/bd4d1cd1ca3037e6dc8d4081a4303824880b1b45/gfx/2d/Matrix.h#724
+  return -(NSAppUnitsToFloatPixels(aPoint.x, factor) * inverse._13 +
+           NSAppUnitsToFloatPixels(aPoint.y, factor) * inverse._23 +
+           inverse._43) /
+         inverse._33;
 }
 
 /* The transform is opaque iff the transform consists solely of scales and
